--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h3>Tirza</h3>
 		<h3>Laura</h3>
 		<a href="http://www.buas.nl/en">visit the buas website here</a>		
-		<p>nice to meet you. in this paragraph i will later on explain more about my topic</p>
+		<p>welcome to my little roast</p>
 		<img><img src="images/art3.jpg" alt="abstract line painting"></img>
 
 	</body>
