--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
 	<body>
 		<h1>When is art considered art?</h1>
-		<h3>Tirza</h3>
-		<h3>Laura</h3>
+		<h3>Created by Tirza</h3>
+		<h3>Edited by Jason</h3>
 		<a href="http://www.buas.nl/en">visit the buas website here</a>		
 		<p>welcome to my little roast..</p>
 		<img><img src="images/art3.jpg" alt="abstract line painting"></img>
