Level 3 header name

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<h1>When is art considered art?</h1>
 		<h3>Created by Tirza</h3>
 		<h3>Edited by Jason</h3>
+		<h3>Edited by David</h3>
 		<a href="http://www.buas.nl/en">visit the buas website here</a>		
 		<p>welcome to my little roast..</p>
 		<img><img src="images/art3.jpg" alt="abstract line painting"></img>
